[package]
name = "soup"
version = "0.6.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
license = "CC-PDDC"
description = """
Inspired by the python library BeautifulSoup, this is a layer on top of html5ever that adds a different API for querying and manipulating HTML
"""
documentation = "https://docs.rs/soup"
repository = "https://gitlab.com/pwoolcoc/soup.git"
edition = "2021"

[dependencies]
html5ever = "0.29"
regex = { version = "1.0.5", optional = true }
markup5ever_rcdom = "0.5.0-unofficial"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }

[features]
default = ["regex"]
