[package]
name = "soup"
version = "0.6.1"
authors = ["Paul Woolcock <paul@woolcock.us>"]
license = "CC-PDDC"
description = """
Inspired by the python library BeautifulSoup, this is a layer on top of html5ever that adds a different API for querying and manipulating HTML
"""
documentation = "https://docs.rs/soup"
repository = "https://gitlab.com/pwoolcoc/soup.git"
edition = "2024"

[dependencies]
html5ever = "0.39"
regex = { version = "1.12.3", optional = true }
markup5ever_rcdom = "0.39.0-unofficial"

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }

[features]
default = ["regex"]
